--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "formik": "^2.4.9",
     "next": "13.5.11",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
