--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.5",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@mui/x-data-grid": "^8.22.0",
     "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
     "formik": "^2.4.9",
     "next": "13.5.11",
     "next-auth": "^4.24.13",
@@ -21,7 +24,9 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.2.0",
+    "timeago.js": "^4.0.2",
     "yup": "^1.7.1"
   },
   "devDependencies": {
