--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "formik": "^2.4.9",
+    "lucide-react": "^0.561.0",
     "next": "13.5.11",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
