--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.19.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
+    "stripe": "^20.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
